# gameSer

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  README.md  makefw.sh  totallines.sh
client/: build.sh  client.go
server/: a.out  main.cpp
server/agent/: configmanager.go  gameclient.go  go.mod  go.sum  main.go
server/center/: main.cpp  rankmanager.cpp  rankmanager.h
server/cppAgent/: main.cpp
server/cppAgent/anetwork/: anetworkmanager.cpp  anetworkmanager.h
server/game/: main.cpp
server/game/common/: servercommon.h
server/game/msghandle/: msghandle.cpp
server/game/servervar/: servervar.cpp  servervar.h
server/share/: commoninclude.h
server/share/common/: .servercommon.h.swp  gamelog.h  servercommon.h  timemanager.h  timermanager.cpp  timermanager.h
server/share/config/: configmanager.cpp  configmanager.h
server/share/msghandle/: msghandle.h
server/share/network/: epollthread.cpp  epollthread.h  listener.cpp  listener.h  memorypipe.cpp  memorypipe.h  networkmanager.cpp  networkmanager.h  nw_api_sock.h  nw_define.h  nw_epoll.cpp  nw_epoll.h  nw_socketmanager.cpp  nw_socketmanager.h  requestor.cpp  requestor.h  service.cpp  service.h  socketthread.cpp  socketthread.h
server/share/tools/: create.sh
server/share/tools/protobuf/: init.proto
server/tools/: create.sh  createForWin.ps1  enum.include  protobuf.xml  tool.py
server/tools/protobuf/: initmsg.proto  initmsg_protocol.proto  loginmsg.proto  loginmsg_protocol.proto
server/tools/protocol_include/: handle.foot.include  handle.head.include  protocol.body.include  protocol.foot.include  protocol.head.include
