PROJECT(game)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/share/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/game/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/center/)

FIND_PACKAGE(Protobuf REQUIRED)


FILE(GLOB_RECURSE share_src ${PROJECT_SOURCE_DIR}/server/share/*.cpp)
FILE(GLOB_RECURSE proto_src ${PROJECT_SOURCE_DIR}/server/share/protocol/*.cc)
ADD_LIBRARY(share SHARED ${share_src})
ADD_LIBRARY(proto SHARED ${proto_src})
SET_TARGET_PROPERTIES(share PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/lib/)
SET_TARGET_PROPERTIES(proto PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/lib/)

FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/game/)
FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/center/)

FILE(GLOB_RECURSE game_src ${PROJECT_SOURCE_DIR}/server/game/*.cpp)
FILE(GLOB_RECURSE center_src ${PROJECT_SOURCE_DIR}/server/center/*.cpp)


ADD_EXECUTABLE(game.bin ${game_src})
SET_TARGET_PROPERTIES(game.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/game/)
TARGET_LINK_LIBRARIES(game.bin share)
TARGET_LINK_LIBRARIES(game.bin proto)
TARGET_LINK_LIBRARIES(game.bin ${PROTOBUF_LIBRARIES})

ADD_EXECUTABLE(center.bin ${center_src})
SET_TARGET_PROPERTIES(center.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/center/)
TARGET_LINK_LIBRARIES(center.bin share)
TARGET_LINK_LIBRARIES(center.bin proto)
TARGET_LINK_LIBRARIES(center.bin ${PROTOBUF_LIBRARIES})



