PROJECT(game)

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/share/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/game/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/center/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server/cppAgent/)

FIND_PACKAGE(Protobuf REQUIRED)

FILE(GLOB_RECURSE share_src ${PROJECT_SOURCE_DIR}/server/share/*.cpp)
FILE(GLOB_RECURSE proto_src ${PROJECT_SOURCE_DIR}/server/share/protocol/*.cc)

ADD_LIBRARY(share STATIC ${share_src})
ADD_LIBRARY(proto STATIC ${proto_src})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/lib)

#SET_TARGET_PROPERTIES(share PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/lib/)
#SET_TARGET_PROPERTIES(proto PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/lib/)

FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/cppAgent/)
FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/game/)
FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/center/)

FILE(GLOB_RECURSE cppAgent_src ${PROJECT_SOURCE_DIR}/server/cppAgent/*.cpp)
FILE(GLOB_RECURSE game_src ${PROJECT_SOURCE_DIR}/server/game/*.cpp)
FILE(GLOB_RECURSE center_src ${PROJECT_SOURCE_DIR}/server/center/*.cpp)

ADD_EXECUTABLE(agent.bin ${cppAgent_src})
SET_TARGET_PROPERTIES(agent.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/cppAgent/)
TARGET_LINK_LIBRARIES(agent.bin share)
TARGET_LINK_LIBRARIES(agent.bin proto)
TARGET_LINK_LIBRARIES(agent.bin ${PROTOBUF_LIBRARIES})

ADD_EXECUTABLE(game.bin ${game_src})
SET_TARGET_PROPERTIES(game.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/game/)
TARGET_LINK_LIBRARIES(game.bin share)
TARGET_LINK_LIBRARIES(game.bin proto)
TARGET_LINK_LIBRARIES(game.bin ${PROTOBUF_LIBRARIES})

ADD_EXECUTABLE(center.bin ${center_src})
SET_TARGET_PROPERTIES(center.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/center/)
TARGET_LINK_LIBRARIES(center.bin share)
TARGET_LINK_LIBRARIES(center.bin proto)
TARGET_LINK_LIBRARIES(center.bin ${PROTOBUF_LIBRARIES})



